--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('bg.jpeg'); /* Adjust the path as needed */
+  background-image: url('bg.jpeg'); 
   background-size: cover; 
   background-position: center;  
   background-repeat: no-repeat; 
